--- a/_layouts/output.html
+++ b/_layouts/output.html
@@ -28,8 +28,7 @@ layout: default
           <li style="border: 1px solid #f5546c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; border-radius: 100px; color: black; list-style: none;"><p style="margin-bottom: 0">{{ expertise }}</p></li>
         {% endfor %}
       </ul>
-      <h4>Narrative Diagram</h4>
-      <p><img src="{{ page.diagram | absolute_url }}"></p>
+      <div id="table--of--content"></div>
     </aside>
     <div class="main-post-content">
       {{ content }}
