--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -23,11 +23,19 @@ crossorigin="anonymous"></script>
 			<p>
 				{{ source.description }}
 			</p>
-			<p>
+			<p class="download">
 				<a class="data-link" href="{{ source.link | relative_url }}" target="_blank">
-					{{ source.link | escape }}
+					<i class="fas fa-cloud-download-alt"></i>
 				</a>
 			</p>
+				<ul style="list-style: none; margin-left: 0;">
+				{% for output in source.used %}
+					<li style="margin-bottom: 1rem; padding-left: 0;">In <a href="{{ output.link | relative_url }}" target="blank">
+						{{ output.title }}
+					</a></li>
+
+				{%- endfor -%}
+				</ul>
 		</li>
 		{%- endfor -%}
 	</ul>
