--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,11 +17,11 @@ layout: default
   </div>
   <h2>SAFARI NJEMA aims to</h2>
   <div class="home--objectives">
-      <div><i class="fas fa-bus"></i> Studiare il fenomeno della mobilità informale</div>
-      <div><i class="fas fa-chart-line"></i> Costruire un modello di analisi che integri GPS data</div>
-      <div><i class="fas fa-file-signature"></i> Offrire elementi/cognizioni per innovare il policy making</div>
-      <div><i class="fas fa-long-arrow-alt-up"></i> Elaborare indicatori di performance</div>
-      <div><i class="fas fa-asterisk"></i> Sperimentare visualizzazioni innovative</div>
+      <div><i class="fas fa-bus"></i> Study informal mobility</div>
+      <div><i class="fas fa-chart-line"></i> Build a model that integrates GPS data</div>
+      <div><i class="fas fa-file-signature"></i> Offer insights to improve policy making</div>
+      <div><i class="fas fa-long-arrow-alt-up"></i> Construct performance indicators</div>
+      <div><i class="fas fa-asterisk"></i> Experiment with data visualisation</div>
       <a href="{{ '/mission/' | relative_url }}"><button>Read more →</button></a>
   </div>
 </div>
