--- a/_layouts/outputs.html
+++ b/_layouts/outputs.html
@@ -15,7 +15,7 @@ layout: default
   <ul class="post-list">
     {%- for question in site.questions -%}
     <li>
-      <img src="https://via.placeholder.com/1200x800" style="margin: 0; margin-right: 2rem;" height="800">
+      <img src="https://via.placeholder.com/1200x800" style="margin: 0; margin-right: 2rem; margin-bottom: 2rem;">
       <span>
       <h2>
         <a class="post-link" href="{{ question.url | relative_url }}">
