--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,18 +4,18 @@ layout: default
 
 <div id="safari--cover">
   <div>
-    <h1 class="post-title">SAFARI NJEMA</h1>
-    <h2>Supporting mobility policies through Big Data Analysis</h2>
+    <h1 class="post-title">SAFARI</h1>
+    <h2>Supporting sub-saharian informal mobility policies through Big Data Analysis</h2>
     <div style="text-align: center; margin-top: 2rem;">
     <a href="https://youtu.be/sliSRdTTFGg" target="_blank"><button>Watch the video</button></a></div>
   </div>
 </div>
 
-<div class="home">
+<div id="home" class="home">
   <div class="home-content">
     {{ content }}
   </div>
-  <h2>SAFARI NJEMA aims to</h2>
+  <h2>SAFARI aims to</h2>
   <div class="home--objectives">
       <div><i class="fas fa-bus"></i> Study informal mobility</div>
       <div><i class="fas fa-chart-line"></i> Build a model that integrates GPS data</div>
