--- a/_layouts/mission.html
+++ b/_layouts/mission.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<img src="{{ 'assets/images/mission.jpg' | relative_url }}" style="margin-bottom: 1rem">
+<img src="{{ 'assets/images/mission.jpg' | relative_url }}" style="margin-bottom: 1rem" class="hero--mission">
 <p><i>Photography by <a href="https://www.flickr.com/people/95731954@N02" target="_blank">A Verdade</a>, distributed under a <a href="http://creativecommons.org/licenses/by/2.0/" target="_blank">CC-BY 2.0 license</a></i>.</p>
 <div id="methodology" class="home">
   <div class="page-heading">
