--- a/_layouts/output.html
+++ b/_layouts/output.html
@@ -19,15 +19,15 @@ layout: default
       <h4>Data</h4>
       <ul style="padding: 0; margin-left: 0;">
         {% for source in page.sources %}
-          <li style="border: 1px solid #f5546c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; list-style: none"><a href="{{ source.link }}" target="_blank"> <p style="margin-bottom: 0">{{ source.name }}</p></a></li>
+          <li style="margin-bottom: 0.5rem; list-style: none"><a href="{{ source.link }}" target="_blank"> <p style="margin-bottom: 0">{{ source.name }}</p></a></li>
         {% endfor %}
       </ul>
-      <h4>Expertise</h4>
+      <!-- <h4>Expertise</h4>
       <ul style="padding: 0; margin-left: 0;">
         {% for expertise in page.expertise %}
           <li style="border: 1px solid #f5546c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; border-radius: 100px; color: black; list-style: none;"><p style="margin-bottom: 0">{{ expertise }}</p></li>
         {% endfor %}
-      </ul>
+      </ul> -->
       <div id="table--of--content"></div>
     </aside>
     <div class="main-post-content">
