--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -81,9 +81,8 @@ main {
  */
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   vertical-align: middle;
-  border-radius: 0.5rem;
   margin-left: auto;
   margin-right: auto;
 }
