--- a/_sass/safari/_question.scss
+++ b/_sass/safari/_question.scss
@@ -32,3 +32,9 @@
 .footnotes *, .footnotes p {
   @include relative-font-size(0.9);
 }
+
+.main-post-content p:first-child {
+  font-size: $base-font-size * 1.5;
+  color: $grey-color-darker;
+  margin-bottom: $spacing-unit * 2;
+}
