--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,7 @@
     <a href="{{ "/outputs/" | relative_url }}"><div>Results</div></a>
     <a href="{{ "/mission/" | relative_url }}"><div>Mission</div></a>
     <a href="{{ "/team/" | relative_url }}"><div>Team</div></a>
-    <a href="{{ "/data/" | relative_url }}"><div>Materials</div></a>
+    <a href="{{ "/data/" | relative_url }}"><div>Datasets</div></a>
+    <a href="{{ "/materials/" | relative_url }}"><div>Materials</div></a>
   </div>
 </div>
