--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -276,6 +276,12 @@
     }
   }
 
+  .safari--logos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   div {
     grid-column: span 1;
     margin-bottom: $spacing-unit;
@@ -292,6 +298,7 @@
   img {
     width: auto;
     max-height: 90px;
+    max-width: 200px;
   }
 }
 
@@ -577,7 +584,7 @@
     h3 {
       margin-top: $spacing-unit * 2;
       margin-bottom: $spacing-unit * 1.5;
-      
+
       @include relative-font-size(1.5);
 
       @include media-query($on-laptop) {
