--- a/_layouts/output.html
+++ b/_layouts/output.html
@@ -4,7 +4,7 @@ layout: default
 
 {% capture the_collection %}{{page.collection}}{% endcapture %}
 {% if page.collection %}
-    {% assign  document = site[the_collection]  %}
+    {% assign document = site[the_collection]  %}
 {% endif %}
 {% for links in document  %}
     {% if links.title == page.title %}
@@ -24,9 +24,9 @@ layout: default
 {% endfor %}
 
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-  <div style="display: flex; width: 100%; align-content: space-between;">
-  {% if prevurl %}<a href="{{prevurl | relative_url }}"><button class="pagination pagination__prev"><span class="pagination__arrow">&larr;</span><span class="pagination__link">{{ prevname | truncatewords:6 }}</span></button></a>{% endif %}
-  {% if nexturl %}<a href="{{nexturl | relative_url }}" class="pagination__next"><button class="pagination"><span class="pagination__link">{{ nextname | truncatewords:6 }}</span><span class="pagination__arrow">&rarr;</span></button></a>{% endif %}
+  <div style="display: flex; flex-wrap: wrap; width: 100%; justify-content: space-between;">
+  {% if prevurl %}<a href="{{prevurl | relative_url }}"><span class="pagination__arrow">&larr;</span><span class="pagination__link">{{ prevname | truncatewords:6 }}</span></a>{% endif %}
+  {% if nexturl %}<a href="{{nexturl | relative_url }}" class="pagination__next"><span class="pagination__link">{{ nextname | truncatewords:6 }}</span><span class="pagination__arrow">&rarr;</span></a>{% endif %}
   </div>
 
   <header class="post-header">
