--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
   <div class="wrapper">
     <a href="{{ "/" | relative_url }}"><div id="home">{{ site.title }}</div></a>
     <a href="{{ "/outputs/" | relative_url }}"><div>Results</div></a>
+    <a href="{{ "/events/" | relative_url }}"><div>Events</div></a>
     <a href="{{ "/mission/" | relative_url }}"><div>Mission</div></a>
     <a href="{{ "/team/" | relative_url }}"><div>Team</div></a>
     <a href="{{ "/data/" | relative_url }}"><div>Datasets</div></a>
