--- a/_layouts/outputs.html
+++ b/_layouts/outputs.html
@@ -14,20 +14,41 @@ layout: default
   {%- if site.questions.size > 0 -%}
   <ul class="post-list">
     {%- for question in site.questions -%}
-    <li>
-      <img src="https://via.placeholder.com/1200x800" style="margin: 0; margin-right: 2rem; margin-bottom: 2rem;">
-      <span>
-      <h2>
-        <a class="post-link" href="{{ question.url | relative_url }}">
-          {{ question.title | escape }}
-        </a>
-      </h2>
-        <p>{{ question.content | strip_html | truncatewords:75}}</p>
-        <a class="post-link" href="{{ question.url | relative_url }}"><button>
-          Read more...
-        </button></a>
-      </span>
-    </li>
+    {%- if page.filter == "events" -%}
+      {%- if question.type == "event" -%}
+      <li>
+        <img src="https://via.placeholder.com/1200x800" style="margin: 0; margin-right: 2rem; margin-bottom: 2rem;">
+        <span>
+        <h2>
+          <a class="post-link" href="{{ question.url | relative_url }}">
+            {{ question.title | escape }}
+          </a>
+        </h2>
+          <p>{{ question.content | strip_html | truncatewords:75}}</p>
+          <a class="post-link" href="{{ question.url | relative_url }}"><button>
+            Read more...
+          </button></a>
+        </span>
+      </li>
+      {%- endif -%}
+    {% else %}
+      {%- if question.type != "event" -%}
+      <li>
+        <img src="https://via.placeholder.com/1200x800" style="margin: 0; margin-right: 2rem; margin-bottom: 2rem;">
+        <span>
+        <h2>
+          <a class="post-link" href="{{ question.url | relative_url }}">
+            {{ question.title | escape }}
+          </a>
+        </h2>
+          <p>{{ question.content | strip_html | truncatewords:75}}</p>
+          <a class="post-link" href="{{ question.url | relative_url }}"><button>
+            Read more...
+          </button></a>
+        </span>
+      </li>
+      {%- endif -%}
+    {%- endif -%}
     {%- endfor -%}
   </ul>
   {%- endif -%}
