--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
       <div class="footer-col footer-col-3">
         <h3>Polisocial Award 2018</h3>
         <p>{{- site.description | escape -}}</p>
+        <p><a href="https://www.polisocial.polimi.it/">polisocial.polimi.it</a></p>
       </div>
 
     </div>
