--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div id="safari--cover">
   <div>
     <h1 class="post-title">SAFARI</h1>
-    <h2>Supporting sub-saharian informal mobility policies through Big Data Analysis</h2>
+    <h2>Supporting Sub-Saharan paratransit mobility policies through big data analysis</h2>
     <div style="text-align: center; margin-top: 2rem;">
     <a href="https://youtu.be/sliSRdTTFGg" target="_blank"><button>Watch the video</button></a></div>
   </div>
@@ -15,13 +15,13 @@ layout: default
   <div class="home-content">
     {{ content }}
   </div>
-  <h2>SAFARI aims to</h2>
+  <h2>SAFARI's objectives</h2>
   <div class="home--objectives">
-      <div><i class="fas fa-bus"></i> Study informal mobility</div>
-      <div><i class="fas fa-chart-line"></i> Build a model that integrates GPS data</div>
-      <div><i class="fas fa-file-signature"></i> Offer insights to improve policy making</div>
-      <div><i class="fas fa-long-arrow-alt-up"></i> Construct performance indicators</div>
-      <div><i class="fas fa-asterisk"></i> Experiment with data visualisation</div>
+      <div><i class="fas fa-bus"></i> Studying paratransit mobility</div>
+      <div><i class="fas fa-chart-line"></i> Building a model that integrates GPS data</div>
+      <div><i class="fas fa-file-signature"></i> Offering insights to improve policy making</div>
+      <div><i class="fas fa-long-arrow-alt-up"></i> Constructing performance indicators</div>
+      <div><i class="fas fa-asterisk"></i> Experimenting with data visualisation</div>
       <a href="{{ '/mission/' | relative_url }}"><button>Read more →</button></a>
   </div>
 </div>
