--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -10,27 +10,31 @@ layout: default
   <div class="methodology--content">{{ content }}</div>
 </div>
 
-<div class="post-content e-content">
+<div id="news" class="post-content e-content">
   <aside class="post-meta">
-    <h4>All news</h4>
+    <h4>Timeline</h4>
     <ul class="post-list">
-      {%- for event in page.events -%}
-        <li class="{{ event.type | escape }}">{{ event.title | escape }}</li>
+      {%- for news in page.events -%}
+        <li class="{{ news.type | escape }}" style="text-transform: capitalize">{{ news.title | truncatewords:4 | escape }}</li>
       {%- endfor -%}
     </ul>
   </aside>
 
   <div id="index">
     <ul class="post-list">
-      {%- for event in page.events -%}
-        <li>
-          <img src="{{ event.cover | relative_url }}" style="margin: 0; margin-right: 2rem; margin-bottom: 2rem;">
+      {%- for news in page.events -%}
+        <li class="{{ news.type | escape}}">
           <span>
-          <h3 id="{{ event.title | escape }}">
-              {{ event.title | escape }}
-          </h3>
-            <p>{{ event.calendar | escape }} — {{ event.location | escape }}</p>
-            <p>{{ event.desc | escape }}</p>
+            <h5 class="{{ news.type | escape }}">{{ news.type | escape }}</h5>
+            <h3 id="{{ news.title | escape }}">
+                {{ news.title | escape }}
+            </h3>
+          {%- if news.type == "event" -%}
+            <p>{{ news.calendar | escape }} — {{ news.location | escape }}</p>
+            {%- else -%}
+              <p>{{ news.calendar | escape }}</p>
+          {%- endif -%}
+            <p>{{ news.desc | escape }}</p>
           </span>
         </li>
       {%- endfor -%}
