--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -10,12 +10,12 @@ layout: default
   <div class="methodology--content">{{ content }}</div>
 </div>
 
-<div class="post-content e-content">
+<div id="news" class="post-content e-content">
   <aside class="post-meta">
     <h4>All news</h4>
     <ul class="post-list">
       {%- for event in page.events -%}
-        <li class="{{ event.type | escape }}">{{ event.title | escape }}</li>
+        <li class="{{ event.type | escape }}">{{ event.title | truncatewords: 5 | escape }}</li>
       {%- endfor -%}
     </ul>
   </aside>
@@ -35,11 +35,6 @@ layout: default
               <p>{{ news.calendar | escape }}</p>
           {%- endif -%}
             <p>{{ news.desc | escape }}</p>
-          <h3 id="{{ event.title | escape }}">
-              {{ event.title | escape }}
-          </h3>
-            <p>{{ event.calendar | escape }} — {{ event.location | escape }}</p>
-            <p>{{ event.desc | escape }}</p>
           </span>
         </li>
       {%- endfor -%}
