--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -80,10 +80,11 @@ main {
  * Images
  */
 img {
-  max-width: 100%;
-  height: auto;
   display: block;
+  width: 100%;
   vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /**
