--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,6 @@
     <a href="{{ "/team/" | relative_url }}"><div>Team</div></a>
     <a href="{{ "/data/" | relative_url }}"><div>Data & Materials</div></a>
     <a href="{{ "/outputs/" | relative_url }}"><div>Results</div></a>
-    <a href="{{ "/news/" | relative_url }}"><div>News</div></a>
+    <a href="{{ "/news/" | relative_url }}"><div>Publications & News</div></a>
   </div>
 </div>
