--- a/_layouts/output.html
+++ b/_layouts/output.html
@@ -43,14 +43,14 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     <aside class="post-meta">
-      {%- if page.sources -%}
+      <!-- {%- if page.sources -%}
       <h4>Resources</h4>
       <ul style="padding: 0; margin-left: 0;">
         {% for source in page.sources %}
           <li style="margin-bottom: 0.5rem; list-style: none"><a href="{{ source.link }}" target="_blank"> <p style="margin-bottom: 0">{{ source.name }}</p></a></li>
         {% endfor %}
       </ul>
-      {%- endif -%}
+      {%- endif -%} -->
       {%- if page.calendar -%}
       <h4>Calendar</h4>
       <p>{{ page.calendar }} - {{ page.location }}</p>
